<resources>
    <string name="app_name">appforros</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ros机器人控制App</string>
    <string name="nav_header_subtitle">107组</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_user">用户</string>
    <string name="menu_login">登录</string>
    <string name="menu_home">连接</string>
    <string name="menu_gallery">控制</string>
    <string name="menu_slideshow">规划</string>
    <string name="menu_tools">交互</string>
    <string name="menu_share">帮助</string>
    <string name="menu_send">其它</string>
</resources>
