<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user"
            android:title="@string/menu_user" />

        <item
            android:id="@+id/nav_robot"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_control"
            android:title="@string/menu_gallery" />

        <item
            android:id="@id/nav_plan"
            android:title="@string/menu_slideshow"
            />

        <item
            android:id="@+id/nav_chat"
            android:title="@string/menu_tools" />
    </group>


</menu>
